--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 <body>
     <div class="container">
         <header>
-            <img src="C:\Users\aeonk\OneDrive - Informatics Philippines\Documents\ME\FORMAL PICS\2X2.jpg" alt="Jane Doe" class="profile-img">
+            <img src="2X2.jpg" alt="Jane Doe" class="profile-img">
             <h1>Aeon Kenshin Dela Cruz</h1>
             <p class="tagline">1st Year BS Computer Science Student</p>
         </header>
